--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -2,23 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_inform"
+        android:icon="@drawable/ic_info"
         android:enabled="true"
         android:title="주변 가격 정보"
         />
     <item
         android:id="@+id/action_nears"
+        android:icon="@drawable/ic_map"
         android:enabled="true"
         android:title="내 주변 가게" />
     <item
         android:id="@+id/action_graph"
+        android:icon="@drawable/ic_chart"
         android:enabled="true"
         android:title="시세 변동 추이" />
     <item
         android:id="@+id/action_trade"
+        android:icon="@drawable/ic_trade"
         android:enabled="true"
         android:title="직거래" />
     <item
         android:id="@+id/action_camera"
+        android:icon="@drawable/ic_search"
         android:enabled="true"
         android:title="이력제 번호" />
 
